--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     font-family: 'Poppins',sans-serif;
     scroll-behavior: smooth;
 }
-
+ 
 body
 {
     min-height: 100vh;
@@ -153,3 +153,36 @@ section img#clouds
     color: #ffffff;
     font-size: 1em;
 }
+
+.city{
+    font-size: 32px;
+}
+
+.date {
+    font-size: 16px;
+}
+
+.container-temp{
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    font-size: 100px;
+    font-weight: 900;
+    text-shadow: 3px 6px rgba(255, 255, 255, 0.2);
+}
+
+.weather{
+    font-size: 32px;
+}
+
+.low-high {
+    font-size: 22px;
+}
+
+.card-body{
+    background: linear-gradient(#533be0,#8a0b96);
+    border-radius: 15%;
+    text-align: center;
+    color: white;
+}
+
